# wow-vanfw

./: .gitignore  CHANGELOG.md  Init.lua  README.md
Libs/: LibDraw.lua
MCP/: pyproject.toml  requirements.txt  server.py  setup.py
Rotations/MONK/: Brewmaster.lua
Rotations/Utility/: AutoTarget.lua
Rotations/WARLOCK/: Affliction.lua
VanFW/: Alerts.lua  BossAwareness.lua  BossTimers.lua  Core.lua  DBMIntegration.lua  Draw.lua  Environment.lua  GUI.lua  Helpers.lua  MCP.lua  Objects.lua  RotationEngine.lua  Spells.lua  Targeting.lua  ToggleButton.lua  Units.lua  VanKili.lua  depends.lua
standalone/: BossAwareness_Standalone.lua  BossTimers_Standalone.lua  CCTracker_Standalone.lua
